src/test/deca/syntax/invalid/resultats/test_hello_basic_tokens1-synt.res
./src/test/deca/syntax/invalid/test_hello_basic_tokens1.deca:16:6: extraneous input ')' expecting '('
